--- a/assets/default/css/colors.css
+++ b/assets/default/css/colors.css
@@ -32,7 +32,7 @@
 	background-color:var(--siteColor);
 }
 .message-bubble.me .message-text{
-	background-color: rgba(var(--rgbColor), 10%);
+	background-color: rgba(var(--rgbSite), 10%);
 }
 .message-bubble .message-text.message-deleted{
 	background-color: rgb(220 53 69 / 0.1);
@@ -94,7 +94,7 @@
  .header-widget .log-in-button:hover,
  .header-widget .log-in-button:hover i,
  .freelancer-name h4 a:hover,
- .job-listing h4 > a:hover, .job-listing h3 > a:hover,
+ .job-listing h4 > a:hover, .job-listing h5 > a:hover,
  .messages-headline h4 > a:hover,
  .messages-headline p > a:hover {
      color:var(--siteColor);
