--- a/assets/default/css/lang_ar.css
+++ b/assets/default/css/lang_ar.css
@@ -82,6 +82,9 @@ ul.display-inline li:last-child {
 .btn-circle.ico {
 	left: 1rem;
 }
+.edit_logo_btn.ico{
+	left: 0;
+}
 .header-widget:last-of-type {
 	padding-left: 0;
 	float: left;
@@ -184,9 +187,6 @@ ul.skills li {
 }
 #backtotop {
 	left: 25px;
-}
-.btn-circle {
-	left: 1rem;
 }
 
 @media only screen and (min-width: 768px) {
