--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -1711,7 +1711,7 @@ display: none;
 	background-position: left top;
 	left: 0;
 	top: 0;
-	height: 60%;
+	height: 50%;
 }
 #footer:after{
 	background-position: right bottom;
@@ -6227,23 +6227,23 @@ input.keyword-input {
 }
 .tags-container input[type="checkbox"] + label {
 	transition: 0.3s;
-	font-size: 0.85rem;
+	font-size: 0.875rem;
 	cursor: pointer;
-	border-radius: 0.25rem;
+	border-radius: 2rem;
 	background-color: #eee;
 	color: #333;
 	display: inline-block;
     font-weight: normal;
-	padding: 0.25rem 0.75rem;
-	margin: 0;
-	line-height: 24px;
+	padding: 0.2rem 0.75rem 0.3rem;
+    margin: 0;
+    line-height: 1.25;
 }
 .tags-container input[type="checkbox"] + label:hover {
 	background-color: #e8e8e8;
 }
 .tags-container input[type="checkbox"]:checked + label {
-	background-color: #66676b;
-	color: #fff;
+	background-color: rgba(var(--rgbColor), 20%);
+    color: #000;
 	transition: 0.3s;
 }
 .tags-container input[type="checkbox"] + label:before {
@@ -6257,7 +6257,7 @@ input.keyword-input {
 	top: 3px;
 	margin: 0;
 	opacity: 0;
-	color: #fff;
+	color: #000;
 	line-height: 0;
 	transform: scale(0.5);
 }
@@ -9894,6 +9894,7 @@ input.range-slider, input.default-slider {
 }
 .slider .tooltip {
     opacity: 1;
+	z-index: 10;
 }
 .slider .tooltip.top {
 	margin-top: -60px;
@@ -10393,7 +10394,7 @@ select.bs-select-hidden, select.selectpicker {
 	color: #777;
 	border-radius: 0.25rem;
 }
-.bootstrap-select:before {
+/*.bootstrap-select:before {
 	content: "";
 	position: absolute;
 	z-index: 2100;
@@ -10409,7 +10410,7 @@ select.bs-select-hidden, select.selectpicker {
 }
 .bootstrap-select.open:before {
 	opacity: 1;
-}
+}*/
 .dropdown-menu > li > a:hover, .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover {
 	color: #66676b;
 	text-decoration: none;
@@ -10525,6 +10526,7 @@ width: 5px;
 	opacity: 1;
 	border-color: #ced4da;
 	border-radius: 2rem;
+	font-family: var(--bs-font-sans-serif);
 }
 .sort-by .bootstrap-select.btn-group button {
 	font-size: 0.938rem;
